fixing spacing

--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@
 }
 
 .section{
-	padding-top: 5%;
+	padding-top: 10%;
 }
 .hero{
-	padding-top: 10%;
+	padding-top: 15%;
 }
 
 .project{
@@ -135,3 +135,4 @@ a:hover { color: #5047E5; text-decoration: none; }
 .card:hover {
 	opacity: 0.8;
 	}
+	.mobile-margin { margin-top: 100px; }
